--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.4",
     "@types/validator": "^13.15.2",
@@ -25,6 +26,7 @@
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
