--- a/Backend/package.json
+++ b/Backend/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^3.1.10",
     "qs": "^6.14.0",
     "tsx": "^4.20.3",
+    "validator": "^13.15.15",
     "xss": "^1.0.15",
     "xss-clean": "^0.1.4"
   }
