--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "fabricjs-react": "^2.1.0",
+    "object-hash": "^3.0.0",
     "react": "^19.1.0",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-sketch-canvas": "^6.2.0",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11"
   },
