--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.4",
+    "@types/socket.io": "^3.0.1",
     "@types/validator": "^13.15.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -33,6 +34,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
     "qs": "^6.14.0",
+    "socket.io": "^4.8.1",
     "tsx": "^4.20.3",
     "validator": "^13.15.15",
     "xss": "^1.0.15",
