--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,17 +22,22 @@
     "react-sketch-canvas": "^6.2.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "install": "^0.13.0",
+    "npm": "^10.9.3",
     "vite": "^7.0.0"
   }
 }
