--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,18 +13,21 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "fabricjs-react": "^2.1.0",
+    "konva": "^9.3.20",
     "object-hash": "^3.0.0",
     "react": "^19.1.0",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-konva": "^19.0.7",
     "react-router-dom": "^7.6.3",
     "react-sketch-canvas": "^6.2.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
