--- a/Backend/package.json
+++ b/Backend/package.json
@@ -36,6 +36,7 @@
     "qs": "^6.14.0",
     "socket.io": "^4.8.1",
     "tsx": "^4.20.3",
+    "uuid": "^11.1.0",
     "validator": "^13.15.15",
     "xss": "^1.0.15",
     "xss-clean": "^0.1.4"
